# faine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: __private.rs  collections.rs  common.rs  error.rs  functions.rs  lib.rs  macros.rs  options.rs  runner.rs  tree.rs
tests/: consumer.rs  main.rs  zerocost.rs
tests/consumer-test-project/: Cargo.toml
tests/consumer-test-project/src/: lib.rs
tests/consumer-test-project/tests/: main.rs
tests/zerocost-test-project/: Cargo.toml
tests/zerocost-test-project/src/: main.rs
